# telnet-project

./: .gitignore  CMakeLists.txt  README.txt  Server.cpp  Server.h  Session.cpp  Session.h  echoserver.cpp  echouser.cpp  execute.cpp  execute.h  runserver.cpp  shelluser.cpp
server/: Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  database.txt  start_shell.cpp  start_shell.h
server/database/: User.cpp  User.h  UserMap.cpp  UserMap.h
server/shell/: Executor.h  SessionAdapter.cpp  SessionAdapter.h
server/shell/interpreter/: Interpreter.cpp  getargs.cpp
server/shell/mybuiltins/: FileInterpreter.cpp  Mcd.h  Mecho.cpp  Merrno.cpp  Merrno.h  Mexit.cpp  Mexport.h  Mpwd.cpp
server/shell/syscalls/: systemcallerror.cpp  systemcallerror.h  systemcalls.cpp
server/shell/variable_map/: VariablesMap.cpp  VariablesMapError.h
sources/: Executor.cpp  Executor.h  Myshell.cpp  Myshell.h  SessionAdapter.cpp  SessionAdapter.h  main.cpp
sources/arguments/: Arguments.cpp  Arguments.h  ArgumentsError.cpp  ArgumentsError.h  DescriptorChanger.cpp  DescriptorChanger.h
sources/interpreter/: Interpreter.cpp  Interpreter.h  getargs.cpp  getargs.h
sources/mybuiltins/: FileInterpreter.cpp  FileInterpreter.h  Mcd.cpp  Mcd.h  Mecho.cpp  Mecho.h  Merrno.cpp  Merrno.h  Mexit.cpp  Mexit.h  Mexport.cpp  Mexport.h  Mpwd.cpp  Mpwd.h
sources/syscalls/: execute.cpp  execute.h  systemcallerror.cpp  systemcalls.cpp  systemcalls.h
sources/variable_map/: VariablesMap.cpp  VariablesMap.h  VariablesMapError.cpp
